{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 26,
  "lineage": "c987310b-f6af-b755-0c8c-5d9823d25280",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "alb_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:283940384509:targetgroup/nginxtg/a279c4961a4534ce",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:283940384509:listener-rule/app/nginx-lb/27f67ca809784e58/6fdc54993a3ebf9f/35cd49949f9f4176",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/version.txt"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:283940384509:listener-rule/app/nginx-lb/27f67ca809784e58/6fdc54993a3ebf9f/35cd49949f9f4176",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-2:283940384509:listener/app/nginx-lb/27f67ca809784e58/6fdc54993a3ebf9f",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nginx-lb",
            "aws_lb_listener.nginx-listener",
            "aws_lb_target_group.nginxtg",
            "aws_security_group.nginxsgroup",
            "data.aws_subnet_ids.subnet_ids"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginxversion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09246ddb00c7c4fef",
            "arn": "arn:aws:ec2:us-east-2:283940384509:instance/i-0aadf3b1c980725b9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0aadf3b1c980725b9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "avinash",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0202558e9fbe44693",
            "private_dns": "ip-172-31-18-143.us-east-2.compute.internal",
            "private_ip": "172.31.18.143",
            "public_dns": "ec2-18-191-170-51.us-east-2.compute.amazonaws.com",
            "public_ip": "18.191.170.51",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09de403c7f9aa161a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "nginxsgroup"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-f102fa8c",
            "tags": {
              "Name": "NGINX-SERVER"
            },
            "tags_all": {
              "Name": "NGINX-SERVER"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a2a1ffc609115b5b"
            ]
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nginx-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:283940384509:loadbalancer/app/nginx-lb/27f67ca809784e58",
            "arn_suffix": "app/nginx-lb/27f67ca809784e58",
            "dns_name": "nginx-lb-1644501197.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:283940384509:loadbalancer/app/nginx-lb/27f67ca809784e58",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nginx-lb",
            "security_groups": [
              "sg-0a2a1ffc609115b5b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-a145c7ca"
              },
              {
                "subnet_id": "subnet-f102fa8c"
              },
              {
                "subnet_id": "subnet-f97d5eb5"
              }
            ],
            "subnets": [
              "subnet-a145c7ca",
              "subnet-f102fa8c",
              "subnet-f97d5eb5"
            ],
            "tags": {
              "Application": "NGINX"
            },
            "tags_all": {
              "Application": "NGINX"
            },
            "vpc_id": "vpc-87a63cec",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.nginxsgroup",
            "data.aws_subnet_ids.subnet_ids"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:283940384509:listener/app/nginx-lb/27f67ca809784e58/6fdc54993a3ebf9f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:283940384509:targetgroup/nginxtg/a279c4961a4534ce",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:283940384509:listener/app/nginx-lb/27f67ca809784e58/6fdc54993a3ebf9f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:283940384509:loadbalancer/app/nginx-lb/27f67ca809784e58",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nginx-lb",
            "aws_lb_target_group.nginxtg",
            "aws_security_group.nginxsgroup",
            "data.aws_subnet_ids.subnet_ids"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginxtg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:283940384509:targetgroup/nginxtg/a279c4961a4534ce",
            "arn_suffix": "targetgroup/nginxtg/a279c4961a4534ce",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 60,
                "matcher": "200",
                "path": "/version.txt",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:283940384509:targetgroup/nginxtg/a279c4961a4534ce",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "nginxtg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-87a63cec"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nginxtg-attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:283940384509:targetgroup/nginxtg/a279c4961a4534ce-20210626185515945100000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:283940384509:targetgroup/nginxtg/a279c4961a4534ce",
            "target_id": "i-0aadf3b1c980725b9"
          },
          "dependencies": [
            "aws_instance.nginxversion",
            "aws_lb_target_group.nginxtg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginxsgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:283940384509:security-group/sg-0a2a1ffc609115b5b",
            "description": "security group whcih allows port 80 and 22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0a2a1ffc609115b5b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginxsgroup",
            "name_prefix": "",
            "owner_id": "283940384509",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "NGINX_SG"
            },
            "tags_all": {
              "Name": "NGINX_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-87a63cec"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}